Fix overflow issues
I have no idea why this works.

--- a/static/blog.css
+++ b/static/blog.css
@@ -96,10 +96,10 @@ h2, h3, h4 {
 
 .content {
     position: relative;
-    flex: 1;
     line-height: 1.4;
     padding: .5em 2em 1.5em;
     background: rgba(29, 29, 29, 0.9);
+    overflow-x: hidden;
 }
 
 .content img {
@@ -126,6 +126,7 @@ pre {
     padding: .3em .5em;
     border: 1px solid #333;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    overflow-x: auto;
 }
 
 pre, .bg {
